// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Clevertap's userUpload destination action: all fields 1`] = `
Object {
  "d": Array [
    Object {
      "identity": "h%1uFs@uMTu",
      "profileData": Object {
        "testType": "h%1uFs@uMTu",
      },
      "source": "Segment",
      "ts": "h%1uFs@uMTu",
      "type": "profile",
    },
  ],
}
`;

exports[`Testing snapshot for Clevertap's userUpload destination action: required fields 1`] = `
Object {
  "d": Array [
    Object {
      "identity": "h%1uFs@uMTu",
      "source": "Segment",
      "type": "profile",
    },
  ],
}
`;
